--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
             android:name="android.hardware.nfc"
             android:required="true" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
 
     <application
             android:allowBackup="true"
