--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.NFC" />
 
     <uses-feature
-            android:name="android.hardware.nfc"
-            android:required="true" />
+        android:name="android.hardware.nfc"
+        android:required="true" />
 
     <uses-permission android:name="android.permission.INTERNET" />
 
 
-
     <application
-            android:allowBackup="true"
-            android:dataExtractionRules="@xml/data_extraction_rules"
-            android:fullBackupContent="@xml/backup_rules"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/Theme.NFCAPP"
-            tools:targetApi="31"
-            android:networkSecurityConfig="@xml/network_security_config">
+        android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.NFCAPP"
+        tools:targetApi="31">
 
 
-        <activity android:name=".activity.NFCActivity"
-                  android:exported="true">
+        <activity
+            android:name=".activity.NFCActivity"
+            android:exported="true">
 
             <!-- Launch intent filter -->
             <intent-filter>
@@ -37,7 +37,6 @@
             <!-- NFC intent filters -->
             <intent-filter>
                 <action android:name="android.nfc.action.TECH_DISCOVERED" />
-                <!-- Include other necessary intent filters for NFC -->
             </intent-filter>
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
@@ -47,11 +46,13 @@
 
             <!-- Meta-data element specifying a resource XML that contains tech lists -->
             <meta-data
-                    android:name="android.nfc.action.TECH_DISCOVERED"
-                    android:resource="@xml/nfc_tech_filter" />
+                android:name="android.nfc.action.TECH_DISCOVERED"
+                android:resource="@xml/nfc_tech_filter" />
         </activity>
 
-        <activity android:name=".activity.AdminLoginActivity" android:exported="true">
+        <activity
+            android:name=".activity.AdminLoginActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -59,7 +60,9 @@
 
         </activity>
 
-        <activity android:name=".activity.AdminOptionsActivity" android:exported="true">
+        <activity
+            android:name=".activity.AdminOptionsActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -67,7 +70,9 @@
 
         </activity>
 
-        <activity android:name=".activity.InitActivity" android:exported="true">
+        <activity
+            android:name=".activity.InitActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -75,14 +80,15 @@
 
         </activity>
 
-        <activity android:name=".activity.addObjectActivity" android:exported="true">
+        <activity
+            android:name=".activity.addObjectActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
         </activity>
-
 
 
     </application>
